fix: tech stack vertical overflow corrected

--- a/src/HomePageSections/TechStack.module.css
+++ b/src/HomePageSections/TechStack.module.css
@@ -10,7 +10,7 @@
     border: 1px solid rgba(255, 255, 255, 0.18);
     border-radius: 32px;
 
-    min-height: 50vh;
+    min-height: 60vh;
 
     margin: 0% 1%;
     border-radius: 10px;
@@ -45,6 +45,8 @@
     align-items: flex-start;
 
     flex: 1;
+    /* background-color: red; */
+    min-height: fit-content !important;
 }
 
 .mainTech {
@@ -52,12 +54,13 @@
     grid-template-columns: auto auto auto auto;
     grid-template-rows: auto auto auto auto;
     place-items: center;
-    row-gap: 30%;
+    /* row-gap: 30%; */
     /* column-gap: 30%; */
     padding: 0%;
     margin: 0%;
-    /* background-color: red; */
     width: 100%;
+    /* background-color: purple; */
+    flex: 1;
 }
 
 .mainTechMembers {
@@ -180,7 +183,7 @@
 @media only screen and (max-width: 1000px) {
     .techStack {
         /* margin: 0% 2%; */
-        min-height: 50vh;
+        min-height: 60vh;
     }
 
     .mainTech {
